fixed profile picture cut off behind navbar

--- a/View/css/base.css
+++ b/View/css/base.css
@@ -27,6 +27,10 @@ body {
 body::-webkit-scrollbar {
   display: none;
 }
+.main-section {
+  margin-top: 80px;
+  min-height: calc(100vh - 80px);
+}
 
 /* Utility Classes */
 .container {
